--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-i# Hexo Configuration
+# Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
