--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js             # 指定博客源码语言环境
 node_js: 
 - '11'   		  	          # 指定语言版本
-cache: npm                    # 指定 npm 缓存方案，会缓存 $HOME/.npm 或 node_modules 文件夹
+#cache: npm                    # 指定 npm 缓存方案，会缓存 $HOME/.npm 或 node_modules 文件夹
 
 branches:                     # 指定要构建的分支
   only:                       # only 表示只构建以下分支
