--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ node_js:
 - '11'   		  	          # 指定语言版本
 cache: npm                    # 指定 npm 缓存方案，会缓存 $HOME/.npm 或 node_modules 文件夹
 
-#branches:                     # 指定要构建的分支
-#  only:                       # only 表示只构建以下分支
-#  - source					  # Github 源代码分支	
-#
+branches:                     # 指定要构建的分支
+  only:                       # only 表示只构建以下分支
+  - source					  # Github 源代码分支	
+
 #before_install:               # install 阶段之前执行
 #  - export TZ='Asia/Beijing'  # 设置时区
 #  - npm install -g hexo-cli   # 全局安装 Hexo 命令行工具
