--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ script:
   - hexo clean
   - hexo generate             # Hexo 常规命令，执行清理和生成
 
-#after_success:                # script 阶段成功时执行，构建失败不会执行，其他同上
-#  - git config --local user.name "roastduckcd"
-#  - git config --local user.email "sjy457346652@aliyun.com"
-#  # 配置 hexo _config.yml 中的 deploy 字段。也就是博客部署的分支
-#  - sed -i'' "s~git@github.com:~https://${GITHUB_TOKEN}@github.com/~" _config.yml
-#  # - hexo deploy 			  # 通过 Hexo 的 deploy 命令部署博客
-#  cat _config.yml
+after_success:                # script 阶段成功时执行，构建失败不会执行，其他同上
+  - git config --local user.name "roastduckcd"
+  - git config --local user.email "sjy457346652@aliyun.com"
+  # 配置 hexo _config.yml 中的 deploy 字段。也就是博客部署的分支
+  - sed -i'' "s~git@github.com:~https://${GITHUB_TOKEN}@github.com/~" _config.yml
+  # - hexo deploy 			  # 通过 Hexo 的 deploy 命令部署博客
+  #cat _config.yml
