--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ skip_render:              #
 
 # Writing
 new_post_name: :title.md  # 新 MarkDown 文件名
-default_layout: post      # 预设布局（网页版式）
+default_layout: post    # 预设网页布局
 titlecase: false          # 标题首字母大写
 external_link: true       # 在新标签中打开链接
 filename_case: 0          # 文件名小写(1)大写(2)
