--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -143,13 +143,14 @@ exturl: false
 # External url should start with http:// or https://
 menu:
   home: / || home
-  about: /about/ || user
   tags: /tags/ || tags
   #categories: /categories/ || th
   archives: /archives/ || archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404.html || heartbeat
+  gossip: /gossip/ || gossip
+  about: /about/ || user
 
 # Enable/Disable menu icons / item badges.
 menu_settings:
