tecent coding repository

--- a/_config.yml
+++ b/_config.yml
@@ -112,9 +112,8 @@ licensee_img: https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git			# 使用 Github 部署
-  repo: git@github.com:roastduckcd/roastduckcd.github.io.git		# SSH 方式的 Github 仓
-  branch: master 		# 博客静态文件部署的分支
-
+  repo: git@github.com:roastduckcd/roastduckcd.github.io.git,master		# SSH 方式的 Github 仓,博客静态文件部署的分支
+  repo: git@git.dev.tencent.com:roastduckcd/blog.git,master
 
 # 统计
 ## dependenices: https://github.com/theme-next/hexo-symbols-count-time
