--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,9 @@ script:
 
 
 after_success:                # script 阶段成功时执行，构建失败不会执行，其他同上
-  
-  - hexo deploy 			  # 通过 Hexo 的 deploy 命令部署博客
+  - git config --local user.name "roastduckcd"
+  - git config --local user.email "sjy457346652@aliyun.com"
+  # 配置 hexo _config.yml 中的 deploy 字段。也就是博客部署的分支
+  - sed -i'' "s~git@github.com:~https://${GITHUB_TOKEN}@github.com/~" _config.yml
+  - sed -i'' "s~git@git.dev.tencent.com:~https://${CODING_TOKEN}@git.dev.tencent.com/~" _config.yml
+  - hexo deploy               # 通过 Hexo 的 deploy 命令部署博客
