--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ deploy:
   repo: 
     github: git@github.com:roastduckcd/roastduckcd.github.io.git		# SSH 方式的 Github 仓,博客静态文件部署的分支
     coding: git@git.dev.tencent.com:roastduckcd/roastduckcd.coding.me.git
+    vultr:/home/git/repo/hexo.git
   branch: master
 # 统计
 ## dependenices: https://github.com/theme-next/hexo-symbols-count-time
