--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "^5.12.1",
     "hexo": "^3.7.0",
     "hexo-deployer-git": "^1.0.0",
+    "hexo-deployer-rsync": "^0.1.3",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^0.1.3",
