--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:         # 博客使用的时区, 默认使用电脑时区
 
 # URL
 # If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://roastduckcd.github.io      # 博客地址
+url: http://roastduck.xyz      # 博客地址
 root: /       # 博客根目录
 permalink: article/:title.html    # 博客文章链接的格式
 permalink_defaults:
@@ -94,7 +94,7 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
-  url: https://roastduckcd.coding.me
+  url: http://roastduck.xyz
 
 
 ## Themes: https://hexo.io/themes/
