--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ node_js:
 - '11'
 cache: npm
 before_install:
-- touch ~/.ssh/blog_server_rsa
-- chmod 666 ~/.ssh/blog_server_rsa
-- openssl aes-256-cbc -K $encrypted_2c1446b86c6a_key -iv $encrypted_2c1446b86c6a_iv -in blog_server_rsa.enc -out ~\/.ssh/blog_server_rsa -d
+- openssl aes-256-cbc -K $encrypted_2c1446b86c6a_key -iv $encrypted_2c1446b86c6a_iv -in blog_server_rsa.enc -out ~\/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - export TZ='Asia/Beijing'
 - npm install -g hexo-cli
