--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "version": "3.8.0"
   },
   "dependencies": {
-    "eslint": "^5.12.1",
+    "eslint": "^5.15.0",
+    "graceful-fs": "^4.1.15",
     "hexo": "^3.7.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-deployer-rsync": "^0.1.3",
@@ -23,6 +24,8 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
     "hexo-symbols-count-time": "^0.4.4",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "hoek": "^6.1.2",
+    "uuid": "^3.3.2"
   }
 }
