--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,11 @@ baidusitemap:
   url: http://roastduck.xyz
 
 
+# 自动生成 CNAME
+Plugins:
+- hexo-generator-cname
+
+
 ## Themes: https://hexo.io/themes/
 #theme: landscape   # 默认主题
 theme: next
