--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-cname": "^0.3.0",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^3.0.1",
     "hexo-generator-searchdb": "^1.0.8",
