--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,14 @@ before_install:
 - echo "  Port $Port" >> ~/.ssh/config
 - echo "  StrictHostKeyChecking no" >> ~/.ssh/config
 - echo "  IdentityFile ~/.ssh/blog_server_rsa" >> ~/.ssh/config
+
+- echo "Host vultr233" >> ~/.ssh/config
+- echo "  HostName $HostName233" >> ~/.ssh/config
+- echo "  User git" >> ~/.ssh/config
+- echo "  Port $Port233" >> ~/.ssh/config
+- echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+- echo "  IdentityFile ~/.ssh/blog_server_rsa" >> ~/.ssh/config
+
 - openssl aes-256-cbc -K $encrypted_2c1446b86c6a_key -iv $encrypted_2c1446b86c6a_iv -in blog_server_rsa.enc -out ~/.ssh/blog_server_rsa -d
 - chmod 600 ~/.ssh/blog_server_rsa
 - export TZ='Asia/Beijing'
